web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web

spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels: 
        app: web
    spec:
      containers:
        - name: app
          image: widgetario/web:21.03
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: db
              mountPath: "/app/secrets"
              readOnly: true

      volumes:
        - name: db
          secret:
            secretName: web-secret
