web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: widgetario-web-lb

spec:
  ports:
    - port: 8080
      targetPort: http
  selector:  
    app: web
