web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: widgetario-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: widgetario.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: widgetario-web-lb
            port:
              number: 8080
